# sator

./: CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.sh
config/: sator.yml
sator/: __init__.py  main.py
sator/adapters/driven/: github_diff_gateway.py  nvd_vulnerability_repository.py
sator/adapters/driven/analyzers/diff/: score_based.py
sator/adapters/driven/classifiers/diff/: pattern_based.py  rule_based.py
sator/adapters/driven/classifiers/impact/: regex_based.py
sator/adapters/driven/classifiers/patch/action/: keyword_based.py
sator/adapters/driven/classifiers/product/: keyword_based.py
sator/adapters/driven/classifiers/weakness/: keyword_based.py
sator/adapters/driven/extractors/attributes/patch/: regex_based.py
sator/adapters/driven/extractors/details/: regex_based.py
sator/adapters/driven/gateways/oss/: github.py
sator/adapters/driven/persistence/: json.py
sator/adapters/driven/repositories/diff/: github.py  mappers.py
sator/adapters/driven/repositories/oss/: github.py  mappers.py
sator/adapters/driven/repositories/product/: cpe.py
sator/adapters/driven/repositories/vulnerability/: mappers.py  nvd.py  osv.py
sator/adapters/driving/cli/: bootstrap.py  main.py
sator/adapters/driving/cli/controllers/: analysis.py  annotation.py  base.py  extraction.py  product.py  resolution.py
sator/config/: sator.yml
sator/controllers/: base.py  database.py  server.py  source.py
sator/core/: adapter.py  exc.py  models.py
sator/core/adapters/: base.py  commit.py  metrics.py  vulnerability.py
sator/core/adapters/github/: adapter.py  commit.py  diff.py  file.py  repository.py
sator/core/adapters/nvd/: adapter.py  commit.py  configuration.py  metrics.py  reference.py  vulnerability.py
sator/core/adapters/osv/: adapter.py  commit.py  metrics.py  reference.py
sator/core/deltas/: helpers.py  parser.py
sator/core/graphql/: mutation.py  objects.py  query.py  schema.py
sator/core/graphql/queries/: counts.py  objects.py  pagination.py
sator/core/models/: bug.py  enums.py  product.py  vulnerability.py
sator/core/models/oss/: annotation.py  diff.py  repository.py
sator/core/models/patch/: __init__.py  attributes.py  descriptor.py  locator.py  references.py
sator/core/models/product/: __init__.py  attributes.py  descriptor.py  locator.py  product.py  references.py
sator/core/models/vulnerability/: __init__.py  attributes.py  description.py  descriptor.py  details.py  locator.py  metadata.py  references.py
sator/core/openai/: prompts.py
sator/core/ports/driven/: diff_gateway.py  diff_repository.py
sator/core/ports/driven/analyzers/: diff.py  patch.py
sator/core/ports/driven/classifiers/: diff.py  impact.py  patch_action.py  product.py  weakness.py
sator/core/ports/driven/extraction/: details.py
sator/core/ports/driven/gateways/: oss.py
sator/core/ports/driven/persistence/: storage.py
sator/core/ports/driven/repositories/: diff.py  oss.py  product.py  vulnerability.py
sator/core/ports/driving/analysis/: diff.py
sator/core/ports/driving/annotation/: details.py  diff.py  product.py
sator/core/ports/driving/extraction/: details.py
sator/core/ports/driving/product/: resolution.py
sator/core/ports/driving/resolution/: diff.py  product.py  vulnerability.py
sator/core/use_cases/: product_resolution.py
sator/core/use_cases/analysis/: diff.py
sator/core/use_cases/analysis/attributes/: __init__.py  patch.py  product.py  vulnerability.py
sator/core/use_cases/annotation/: details.py  diff.py  product.py
sator/core/use_cases/annotation/attributes/: __init__.py  patch.py  product.py  vulnerability.py
sator/core/use_cases/extraction/: __init__.py  details.py
sator/core/use_cases/extraction/attributes/: __init__.py  patch.py  product.py  vulnerability.py
sator/core/use_cases/resolution/: diff.py  product.py  vulnerability.py
sator/core/use_cases/resolution/references/: __init__.py  patch.py  product.py  vulnerability.py
sator/data/: parsing.py  tasking.py
sator/handlers/: database.py  github.py  multi_task.py  nvd.py  nvd_api.py  nvdapi.py  openai.py  osv.py  parser.py  source.py
sator/utils/: misc.py
tests/: test_nvd_commit_adapter.py  test_nvd_config_adapter.py  test_nvd_metrics_adapter.py  test_nvd_reference_adapter.py  test_nvd_vuln_adapter.py  test_nvd_vuln_cwe_adapter.py  test_sator.py
(+16 files in other folders)
