[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/epicosy/sator"
homepage = "https://github.com/epicosy/sator"

[project]
name="sator"
version = "0.0.1"
description = "vulnerability database api"
readme = "README.md"
authors = [
    {name = "Eduard Pinconschi", email="eduard.pinconschi@tecnico.ulisboa.pt"}
]
keywords = ["security", "vulnerability", "database"]
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
classifiers = [
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers"
]
dependencies = [
    "cement==3.0.8",
    "jinja2",
    "colorlog==6.7.0",
    "PyYAML==6.0",
    "requests>=2.28.2",
    "tqdm>=4.64.1",
    "cpeparser~=0.0.2",
    "beautifulsoup4~=4.12.2",
    "arepo==3.3.2",
    "nvdutils==2.4.0",
    "osv-utils==0.3.8"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "twine>=1.11.0",
    "setuptools>=38.6.0",   
    "wheel>=0.31.0"
]


[tool.setuptools.packages.find]
exclude = ["ez_setup", "tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sator = ["tables/*"]

[project.scripts]
sator = "sator.main:main"
